
29th July '99: Eight wxGTK 2.1 snapshot released

The new makefile system is not able to produce shared libraries 
on Unix with the exception of Linux - libtool is really great.
Therefore, the build system defaults to static libraries on
anything but Linux for now.

Work in wxPen, wxBrush and wxDC to match wxMSW more exactly and
to implement missing feature etc.

Reimplemented radio buttons. The first of a group of such buttons
is now marked by having the wxRB_GROUP style.

Complete redesign of all stream classes, including tests for them
in the samples.

Controls now send the same messages (or more importantly none if
changed programmatically) as per wxMSW.

New implementation of wxSocket using an intermediate library called
GSocket. This willl hopefully change in the future.

Reworked in-place editing of wxListCtrl and wxTreeCtrl.

Fixed bug reporting two refreshes when scrolling.

Corrected bug in wxComboBox client data code.

Corrected reported but unverified bug in BMP loading code.

Added a few more methods to wxStaticBitmap.

Integration of wxHTML code in the main library, including wxZIPStream,
wxFilesystem, wxHTMLHelpController and others.

Added a wrapper for ffile() etc functions.

Updateds to wxDynamicLibrary.

New documentation.

Fixed in unenclosed number of other bugs...

25th June '99: Seventh wxGTK 2.1 snapshot released

Many fixes to th new makefile system. The last version gave
immediate crashes on all Unices except Linux when linked
dynamically against an application. I reordered the object
files in the library as I guess that this was the cause.

Added icons to message box. This also slightly killed the
layout so this needs to be changed again.

wxGTK now chooses the best visual available on the display instead
of the default one.

Fixed wxProgressDialog again.

Some more corrections I forgot.

New wxPython (includes new layout system and printing).

15th June '99: Sixth wxGTK 2.1 snapshot released
  
 