@@ -18,9 +18,34 @@ News
 </tr>
 </table>
 
+<H3>August 6th, 1999</H3><P>
+
+Today, a snapshot release of the MSW and the GTK ports has been
+made. The two snapshots are synchronized and have been tested
+for several weeks and should thus be considered to be quite stable.
+
+Among the many new features that have appeared since version 2.0
+was release are:
+
+<ul>
+<li> A great number of incompatiblities between the GTK and the MSW port have been removed. This
+holds escecially true for the way, time and order, controls send notifications to the user program.
+<li> Practically all widgets have been updated, removing bugs or adding missing features to
+specific ports (mostly the GTK port).
+<li> The GTK port now supports GTK version 1.2 as well as 1.0, giving access to the many new
+features, such as e.g. menu accelerators.
+<li> Many of the non-GUI classes have been reworked and new ones added, the stream classes
+having undergone a complete rewrite.
+<li> The addition of code to handle Unicode has begun and is in an advanced state.
+<li> The Python bindings (wxPython) have been largely improved and upadted to the newest
+API and features.
+</ul>
+
+
+
 <H3>July 31st, 1999</H3><P>
 
-We are glad to announce the start of the work on the new wxWindows port - wxBe
+We are glad to announce the start of the work on the new wxWindows port - wxBeOS
 which will implement wxWindows 2 API for <A HREF="http://www.be.com">BeOS</A>.
 Thanks to Be for donating licenses to wxWindows project to make it possible.
 <P>
